# meal-planner

./: .env.docker.example  .gitignore  LICENSE  README.md  docker-compose.yml  recipe-bot-prompt.md
.qwen/: settings.json
backend/: Dockerfile  config.py  main.py  pyproject.toml  seed.py
backend/db/: __init__.py  crud.py  session.py
backend/models/: __init__.py  models.py
backend/routers/: __init__.py  auth.py  cooking_log.py  ingredients.py  recipes.py
client-telegram-bot/: Dockerfile  pyproject.toml
client-telegram-bot/telegram_bot/: bot.py  config.py  ws_client.py
mcp/mcp_recipes/: Dockerfile  api_client.py  server.py
recipe-agent/: Dockerfile  pyproject.toml
recipe-agent/mcp_recipes/: __main__.py  api_client.py  config.py  pyproject.toml  server.py
recipe-agent/recipe_agent/: agent.py  config.py  handler.py  llm_client.py  mcp_client.py  system_prompt.txt
