[project]
name = "recipe-agent"
version = "0.1.0"
description = "AI Recipe Agent — LLM-powered recipe assistant with MCP tools"
requires-python = ">=3.12"
dependencies = [
    "websockets>=13.0",
    "mcp>=1.0.0",
    "openai>=1.50.0",
    "pydantic-settings>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["recipe_agent", "mcp_recipes"]

[project.scripts]
recipe-agent = "recipe_agent.agent:main"
