[project]
name = "mcp-recipes"
version = "0.1.0"
description = "MCP Server for Recipe Tracker tools"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_recipes"]

[project.scripts]
mcp-recipes = "mcp_recipes.server:main"
